# weird-engine

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Game.cpp  Game.h  LICENSE  README.md  WeirdEngine.sln  build-muos.sh  compile_flags.txt  debug_env.sh  deploy-muos.sh  example.weird  fetch-logs.sh  find_log.txt  generateTree.bat  log.txt  refactor.py  run.bat  sdf_pathtracing_review.md  sdl3_muos_crash_report.md  toolchain-aarch64.cmake  weird-engine.sln  weird-engine.vcxproj  weird-engine.vcxproj.filters
.github/workflows/: build-web.yml  cmake-multi-platform.yml  cmake-single-platform.yml  deploy-itch.yml  format.yml
Libraries/include/GLFW/: glfw3.h
Libraries/include/stb/: stb_image.h
Resources/Models/: demo.gltf  sphere.gltf
SampleProject/: project.weird
SampleProject/Resources/Models/: cube.gltf  plane.glb  plane.gltf
SampleProject/Scenes/: EmptyScene.scene  SampleScene.scene
WeirdEngine/: BoxCollider.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Color.h  Component.cpp  Component.h  ComponentManager.h  DebugHelper.cpp  DebugHelper.h  ECS.h  Entity.cpp  Entity.h  FlyMovement.cpp  FlyMovement.h  Game.cpp  Game.h  Input.cpp  Input.h  Math.cpp  Math.h  Matrix3D.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  PhysicsEngine.cpp  PhysicsEngine.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  Quaternion.h  Renderer.h  RigidBody.cpp  RigidBody.h  Scene.cpp  Scene.h  Singleton.h  Solid.cpp  Solid.h  (+13 more)
cmake/create-project/: CMakeLists.txt
cmake/create-project/src/: main.cpp
docs/: MUOS_BUILD.md
examples/3d-experiments/: CMakeLists.txt
examples/3d-experiments/include/: Classic.h  CornellBox.h  DebugPlanes.h  Fire.h  GlobalIllumination.h  GlobalIlumination.h  Lines.h  MaterialShowcase.h  MicroWorld.h  Water.h
examples/3d-experiments/src/: index.html  main.cpp
examples/empty-project/: CMakeLists.txt
examples/empty-project/src/: index.html  main.cpp
examples/opengl-experiments/: CMakeLists.txt
examples/opengl-experiments/assets/fire/: flame.xcf
examples/opengl-experiments/assets/fire/shaders/: fireParticles.frag  fireParticles.vert  flame.frag  heatDistortion.frag  lit.frag  smokeParticles.frag  smokeParticles.vert
examples/opengl-experiments/assets/lines/: combination.frag  lines.frag
examples/opengl-experiments/assets/monkey/: demo.gltf
examples/opengl-experiments/assets/water/shaders/: water.frag  water.vert
examples/opengl-experiments/include/: Fire.h  Lines.h  Water.h  WaterPlane.h
examples/opengl-experiments/src/: index.html  main.cpp
examples/sample-scenes/: CMakeLists.txt
examples/sample-scenes/assets/: empty.weird  example.weird  fish.weird
examples/sample-scenes/assets/Organisms/: ameba.weird  ball.weird  ball2.weird  fish.weird  head_test.weird  man.weird  tank.weird  warrior.weird
examples/sample-scenes/assets/fire/shaders/: fireParticles.vert
examples/sample-scenes/assets/lines/: combination.frag
examples/sample-scenes/assets/water/shaders/: water.frag
examples/sample-scenes/include/: ApparentCircularMotionScene.h  AquariumScene.h  Classic.h  CollisionHandling.h  DestroyScene.h  Fire.h  FireworksScene.h  ImageScene.h  LifeScene.h  Lines.h  MoleculeEditor.h  MoleculeScene.h  MouseCollisionScene.h  RopeScene.h  SceneLoadExample.h  ShapesCombinations.h  SpaceScene.h  Text.h  TextScene.h  WalkScene.h  Water.h  globals.h
examples/sample-scenes/src/: index.html  main.cpp
include/: WeirdEngine.h  weird-engine.h
include/weird-engine/: Background.h  Input.h  Logger.h  Material3D.h  Profiler.h  ResourceManager.h  Scene.h  SceneManager.h  SceneSerializer.h  Utils.h  vec.h
include/weird-engine/Components/: FlyMovement.h  LogicComponent.h  Transform.h
include/weird-engine/Systems/: InstancedRenderSystem.h  PhysicsInteractionSystem.h  PhysicsSystem2D.h  PlayerMovementSystem.h  RenderSystem.h  SDFRenderSystem.h  SDFRenderSystem2D.h
include/weird-engine/components/: FlyMovement.h  FlyMovement2D.h  LogicComponent.h  Transform.h
include/weird-engine/ecs/: Component.h  ComponentArray.h  ComponentManager.h  ECS.h  Entity.h  System.h
include/weird-engine/math/: CompiledMathExpressions.h  Default2DSDFs.h  Default3DSDFs.h  MathExpressionSerialzation.h  MathExpressions.h  Primitives.h  Primitives3D.h  ShapeMacro.h  StarShape.h
include/weird-engine/systems/: 2DSDFShaderGenerationSystem.h  ButtonSystem.h  CameraSystem.h  PhysicsInteractionSystem.h  PhysicsSystem2D.h  PlayerMovementSystem.h  RenderSystem.h  SDFRenderSystem.h  SDFRenderSystem2D.h  (+2 more)
include/weird-physics/: PhysicsSettings.h  Simulation.h  Simulation2D.h
include/weird-renderer/: AudioEngine.h  AudioRingBuffer.h  Camera.h  DataBuffer.h  Debug.h  Display.h  DrawCommand.h  EBO.h  Light.h  Mesh.h  RenderPlane.h  RenderTarget.h  Renderer.h  SDF2DRenderPipeline.h  SDLInitializer.h  SSBODataBuffer.h  Screen.h  Shader.h  Shape.h  SimpleAudioRequest.h  TBODataBuffer.h  Texture.h  VAO.h  VBO.h
scripts/: format.sh
scripts/anbernic/: Weird Samples.sh  Weird_Samples_MTP.sh  build-muos.sh  deploy-muos.sh  fetch-logs.sh
shaders/: sample_buffer.frag
src/: Utils.h  main.cpp  weird.cpp
src/weird-engine/: Input.cpp  Input.h  Logger.cpp  MathExpresions.cpp  MathExpressions.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp
src/weird-physics/: RigidBody.h  Simulation.cpp  Simulation.h  Simulation2D.cpp  Simulation2D.h
src/weird-renderer/: AudioEngine.cpp  Camera.cpp  Camera.h  Display.cpp  EBO.cpp  EBO.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderPlane.cpp  RenderPlane.h  RenderTarget.cpp  Renderer.cpp  Renderer.h  SDF2DRenderPipeline.cpp  SDLInitializer.cpp  SSBODataBuffer.cpp  Screen.cpp  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Shape2D.h  TBODataBuffer.cpp  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  shaderClass.cpp
tools/: CMakeLists.txt
tools/molecule-editor/: CMakeLists.txt
tools/molecule-editor/include/: MoleculeEditor.h
tools/molecule-editor/src/: index.html  main.cpp
tools/scene-editor/: CMakeLists.txt
(+210 files in other folders)
